# python-project-lvl4

./: .env  .gitignore  Makefile  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: Task Manager CI.yml  django.yml  python-app.yml  task-manager-CI.yml
task_manager/: .gitignore  .settings.py.swn  .settings.py.swo  .settings.py.swp  forms.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/api/: apps.py  permissions.py  serializers.py  urls.py  views.py
task_manager/labels/: apps.py  models.py  urls.py  utils.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/: label-create.html  label-delete.html  label-update.html  labels.html
task_manager/labels/tests/: test_models.py  test_views.py
task_manager/statuses/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/: base.html  status-create.html  status-delete.html  status-update.html  statuses.html
task_manager/statuses/tests/: test_models.py  test_views.py
task_manager/tasks/: apps.py  models.py  urls.py  utils.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/templates/: task-create.html  task-delete.html  task-detail.html  task-list.html  task-page.html  task-update.html
task_manager/tasks/tests/: test_models.py  test_views.py
task_manager/templates/: base.html  create-user.html  delete-user.html  home.html  index.html  login.html  update-user.html  user-create.html  users.html
task_manager/templates/labels/: label-update.html
task_manager/templates/statuses/: status-create.html  status-delete.html  status-update.html
task_manager/templates/tasks/: task-create.html  task-delete.html  task-list.html  task-page.html  task.html  (+1 more)
task_manager/users/: apps.py  forms.py  tests.py  urls.py  views.py
(+6 files in other folders)
